--- a/index.html
+++ b/index.html
@@ -5,77 +5,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Time Widget</title>
   <style>
-    :root { --clock-d: 200px; } /* ✅ 시계 원 지름(세로길이 미세조정용) */
+    :root{
+      /* ⬇️ 여기만 할 일 위젯의 실제 높이(px)로 바꾸면 전체 세로 길이가 정확히 같아집니다. */
+      --match-height: 260px; /* 예시값: DevTools로 할 일 위젯 .widget 높이 확인 후 입력 */
+    }
 
     * { box-sizing: border-box; }
     body {
-      margin: 0;
-      padding: 20px;
-      font-family: sans-serif;         /* 저작권 안전 */
+      margin: 0; padding: 20px;
+      font-family: sans-serif;
       background: transparent;
       display: flex; justify-content: center; align-items: center;
       min-height: 100vh;
     }
 
-    /* 바깥: 투명 배경 + 테두리/그림자 (할 일 위젯과 동일) */
+    /* 바깥: 배경 투명 + 테두리/그림자 유지(요청대로) */
     .widget {
       background: transparent;
       border-radius: 32px;
-      padding: 0;                      /* 내부 카드가 패딩 담당 */
+      padding: 0;
       box-shadow: 0 8px 32px rgba(0,0,0,0.06);
-      width: 100%;
-      max-width: 500px;
+      width: 100%; max-width: 500px;
       border: 1px solid rgba(0,0,0,0.04);
+      /* 높이는 내부 .card가 맞춤 */
     }
 
-    /* 안쪽 카드: 흰 배경(다크모드에서도 또렷) */
+    /* 안쪽 카드: 실제 흰 배경(다크모드에서도 또렷) */
     .card {
       background: #fff;
       border-radius: 32px;
-      padding: 32px 28px;              /* ✅ 동일 패딩 */
+      padding: 32px 28px;      /* 할 일 위젯과 동일 */
       width: 100%;
       display: flex; flex-direction: column;
+      /* ⬇️ 총 높이를 정확히 맞추기 위해 고정 */
+      height: var(--match-height);
     }
 
-    .header { text-align: center; margin-bottom: 32px; } /* ✅ 동일 여백 */
+    .header { text-align: center; margin-bottom: 32px; } /* 동일 여백 */
     .title  { font-size: 1.75rem; font-weight: 700; color: #1a1a1a; margin-bottom: 8px; letter-spacing: -0.02em; }
     .date   { font-size: 1rem; color: #999; font-weight: 400; }
 
-    .clock {
-      position: relative;
-      width: var(--clock-d);
-      height: var(--clock-d);
-      margin: 0 auto;                  /* 가운데 정렬 */
-      border-radius: 50%;
-      background: transparent;         /* 원판 자체는 투명 (배경은 카드가 담당) */
+    .clock-wrap {
+      /* 남은 공간에 시계를 배치할 컨테이너 (높이 = match-height - (패딩+헤더) ) */
+      flex: 1;
+      display: flex; align-items: center; justify-content: center;
+      min-height: 0;
     }
 
-    /* 숫자 */
+    .clock {
+      position: relative;
+      border-radius: 50%;
+      background: transparent; /* 원판은 투명, 배경은 .card가 담당 */
+      width: 160px; height: 160px; /* 초기값(스크립트에서 자동으로 정확히 보정) */
+    }
+
     .clock-number, .minor-number {
       position: absolute; transform: translate(-50%, -50%);
       user-select: none; pointer-events: none; color: #1a1a1a;
     }
-    .clock-number { font-weight: 700; font-size: 1.15rem; }
-    .minor-number { font-weight: 500; font-size: .8rem; color: #333; }
+    .clock-number { font-weight: 700; }
+    .minor-number { font-weight: 500; color: #333; }
 
-    /* 중심점 */
     .clock-center {
       position: absolute; top: 50%; left: 50%;
-      width: 18px; height: 18px; background: #000cfe;
-      border: 4px solid #fff; border-radius: 50%;
-      transform: translate(-50%, -50%); z-index: 999;
-      box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
+      background: #000cfe; border: 4px solid #fff;
+      border-radius: 50%; transform: translate(-50%, -50%);
+      z-index: 999; box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
+      width: 18px; height: 18px;
     }
 
-    /* 바늘 */
     .hand {
       position: absolute; top: 50%; left: 50%;
-      transform-origin: 50% 100%;
-      border-radius: 999px; z-index: 10;
+      transform-origin: 50% 100%; border-radius: 999px; z-index: 10;
     }
-    .hour-hand   { width: 10px; height: calc(var(--clock-d) * 0.31); background: #1a1a1a; z-index: 12; }
-    .minute-hand { width: 8px;  height: calc(var(--clock-d) * 0.27); background: #1a1a1a; z-index: 13; } /* 분침 짧게 */
-    .second-hand { width: 4px;  height: calc(var(--clock-d) * 0.35); background: #000cfe; z-index: 11; }
+    .hour-hand   { background: #1a1a1a; z-index: 12; }
+    .minute-hand { background: #1a1a1a; z-index: 13; } /* 분침 짧게 */
+    .second-hand { background: #000cfe; z-index: 11; }
   </style>
 </head>
 <body>
@@ -86,20 +91,19 @@
         <div class="date" id="todayDate"></div>
       </div>
 
-      <div class="clock" id="clock">
-        <!-- 큰 숫자 -->
-        <div class="clock-number" id="num12">12</div>
-        <div class="clock-number" id="num3">3</div>
-        <div class="clock-number" id="num6">6</div>
-        <div class="clock-number" id="num9">9</div>
+      <div class="clock-wrap" id="clockWrap">
+        <div class="clock" id="clock">
+          <div class="clock-number" id="num12">12</div>
+          <div class="clock-number" id="num3">3</div>
+          <div class="clock-number" id="num6">6</div>
+          <div class="clock-number" id="num9">9</div>
 
-        <!-- 바늘 -->
-        <div class="hand hour-hand"   id="hourHand"></div>
-        <div class="hand minute-hand" id="minuteHand"></div>
-        <div class="hand second-hand" id="secondHand"></div>
+          <div class="hand hour-hand"   id="hourHand"></div>
+          <div class="hand minute-hand" id="minuteHand"></div>
+          <div class="hand second-hand" id="secondHand"></div>
 
-        <!-- 중심점 -->
-        <div class="clock-center"></div>
+          <div class="clock-center"></div>
+        </div>
       </div>
     </div>
   </div>
@@ -109,58 +113,97 @@
     function updateDate() {
       const now = new Date();
       const kr = new Date(now.toLocaleString('en-US', { timeZone: 'Asia/Seoul' }));
-      document.getElementById('todayDate').innerText = kr.toLocaleDateString('en-US', {
+      todayDate.textContent = kr.toLocaleDateString('en-US', {
         year: 'numeric', month: 'long', day: 'numeric', timeZone: 'Asia/Seoul'
       });
     }
 
     // 바늘 회전
     const setHand = (el, deg) => el.style.transform = `translate(-50%, -100%) rotate(${deg}deg)`;
-
     function updateClock() {
       const now = new Date();
       const kr = new Date(now.toLocaleString('en-US', { timeZone: 'Asia/Seoul' }));
       const h = kr.getHours() % 12, m = kr.getMinutes(), s = kr.getSeconds();
-      setHand(document.getElementById('hourHand'),   h * 30 + m * 0.5);
-      setHand(document.getElementById('minuteHand'), m * 6);
-      setHand(document.getElementById('secondHand'), s * 6);
+      setHand(hourHand,   h * 30 + m * 0.5);
+      setHand(minuteHand, m * 6);
+      setHand(secondHand, s * 6);
     }
 
-    // 숫자 배치(고정 지름 기준)
-    function placeNumbers() {
-      const d = parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--clock-d'));
-      const r = d / 2;
-      const numOffset = Math.round(d * 0.11);
+    // ⬇️ 전체 높이를 --match-height 에 정확히 맞추도록 시계 지름과 글자/바늘 비율을 계산
+    function fitHeightAndLayout() {
+      const card = document.querySelector('.card');
       const clock = document.getElementById('clock');
 
-      // 큰 숫자 위치
-      const setPos = (el, x, y) => { el.style.left = x + 'px'; el.style.top = y + 'px'; };
-      setPos(num12, r, numOffset);
-      setPos(num3,  d - numOffset, r);
-      setPos(num6,  r, d - numOffset);
-      setPos(num9,  numOffset, r);
+      const target = parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--match-height')); // px
+      const styles = getComputedStyle(card);
+      const padTB = parseFloat(styles.paddingTop) + parseFloat(styles.paddingBottom);
 
-      // 작은 숫자
+      const header = document.querySelector('.header');
+      const headerH = header.offsetHeight; // 제목+날짜+header margin 포함
+
+      // 남는 공간 안에 시계가 들어가야 함
+      let avail = target - padTB - headerH;
+      // 안전 여백
+      avail = Math.max(120, avail); // 최소 120px
+
+      // 시계 지름 = 사용가능 높이의 0.9 (상하 여유 10%)
+      const diameter = Math.floor(avail * 0.9);
+      clock.style.width  = diameter + 'px';
+      clock.style.height = diameter + 'px';
+
+      const radius = diameter / 2;
+      const largeFont = Math.round(diameter * 0.10);
+      const numOffset = Math.round(diameter * 0.11);
+
+      // 큰 숫자 위치/크기
+      [num12, num3, num6, num9].forEach(el => el.style.fontSize = largeFont + 'px');
+      num12.style.left = radius + 'px';               num12.style.top  = numOffset + 'px';
+      num3.style.left  = (diameter - numOffset) + 'px'; num3.style.top  = radius + 'px';
+      num6.style.left  = radius + 'px';               num6.style.top   = (diameter - numOffset) + 'px';
+      num9.style.left  = numOffset + 'px';            num9.style.top   = radius + 'px';
+
+      // 작은 숫자 갱신
       clock.querySelectorAll('.minor-number').forEach(e => e.remove());
-      [1,2,4,5,7,8,10,11].forEach(n => {
-        const angle = n * 30 * Math.PI/180;
-        const minorRadius = r - Math.max(18, Math.floor(d * 0.14));
-        const x = r + minorRadius * Math.sin(angle);
-        const y = r - minorRadius * Math.cos(angle);
+      const minorNums = [1,2,4,5,7,8,10,11];
+      const minorFont = Math.round(diameter * 0.06);
+      const minorRadius = radius - Math.max(18, Math.floor(diameter * 0.14));
+      minorNums.forEach(n => {
+        const angle = (n * 30) * Math.PI / 180;
+        const x = radius + minorRadius * Math.sin(angle);
+        const y = radius - minorRadius * Math.cos(angle);
         const el = document.createElement('div');
         el.className = 'minor-number';
-        el.textContent = n;
+        el.style.fontSize = minorFont + 'px';
         el.style.left = x + 'px';
         el.style.top  = y + 'px';
+        el.textContent = n;
         clock.appendChild(el);
       });
+
+      // 바늘 길이/두께 (분침 더 짧게)
+      const hourLen   = Math.round(radius * 0.62);
+      const minuteLen = Math.round(radius * 0.55);
+      const secondLen = Math.round(radius * 0.70);
+      hourHand.style.height   = hourLen   + 'px';
+      minuteHand.style.height = minuteLen + 'px';
+      secondHand.style.height = secondLen + 'px';
+
+      const hourW   = Math.max(8,  Math.round(diameter * 0.05));
+      const minuteW = Math.max(6,  Math.round(diameter * 0.04));
+      const secondW = Math.max(3,  Math.round(diameter * 0.02));
+      hourHand.style.width   = hourW   + 'px';
+      minuteHand.style.width = minuteW + 'px';
+      secondHand.style.width = secondW + 'px';
     }
 
     // 초기화
     updateDate();
-    placeNumbers();
+    fitHeightAndLayout();
     updateClock();
     setInterval(updateClock, 1000);
+
+    // 창 크기 바뀌면 폰트/숫자 재배치(높이 목표는 유지)
+    window.addEventListener('resize', fitHeightAndLayout);
   </script>
 </body>
 </html>
